Fix text color issues: add explicit black color styling and update default color in index.css

--- a/gary2.0/src/index.css
+++ b/gary2.0/src/index.css
@@ -16,6 +16,11 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+  
+  /* Ensure default text color is black */
+  body, div, p, h1, h2, h3, h4, h5, h6, span, a, button, input, select, textarea {
+    color: rgba(0, 0, 0, 0.87);
+  }
 
   .dark {
     color-scheme: dark;
