Remove conflicting current-plan-button style from tickets.css to allow proper styling of Pricing page buttons

--- a/gary2.0/src/styles/tickets.css
+++ b/gary2.0/src/styles/tickets.css
@@ -2,9 +2,7 @@
 /* No forcing, simple class-based styling */
 
 /* Button text colors */
-.current-plan-button {
-  color: white;
-}
+/* Removed current-plan-button style to allow for customization in the components */
 
 .select-plan-button {
   color: black;
