Completely remove universal background inheritance rules for greater design flexibility

--- a/gary2.0/src/styles/consolidated/error-prevention.css
+++ b/gary2.0/src/styles/consolidated/error-prevention.css
@@ -14,12 +14,4 @@ body {
   background: transparent;
 }
 
-/* Prevent background color flashes on route changes or hydration */
-body > *, #root > *, #app > * {
-  background-color: inherit;
-}
-
-/* Class for components that need to explicitly set backgrounds */
-.bg-explicit {
-  background-color: initial !important;
-}
+/* Universal background inheritance rule removed to allow more design flexibility */
